Added necessary glass export for headless ui testing #49